5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1716_2505.log
== TEST (2019-05-14 16:31:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

k = int(input("Informe um numero: "))
x = eval(input("Informe valor de x: "))

contador = 1
sinal = -1
soma = x
expoente = 3

while (x < k):
	resultado = resultado + (sinal * (x ** expoente / factorial(x))) 
	
	print (round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    k = int(input())
ValueError: invalid literal for int() with base 10: 'pi/2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:31:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

k = int(input("Informe um numero: "))
x = eval(input("Informe valor de x: "))

contador = 1
sinal = -1
soma = x
expoente = 3

while (x < k):
	resultado = resultado + (sinal * (x ** expoente / factorial(expoente)))
	
	print (round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    k = int(input())
ValueError: invalid literal for int() with base 10: 'pi/2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:31:56) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

k = int(input("Informe um numero: "))
x = eval(input("Informe valor de x: "))

contador = 1
sinal = -1
soma = x
expoente = 3

while (x < k):
	resultado = resultado + (sinal * (x ** expoente / factorial(expoente)))
	contador = contador + 1
	
	print (round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    k = int(input())
ValueError: invalid literal for int() with base 10: 'pi/2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:33:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

x = eval(input("Informe valor de x: "))
k = int(input("Informe um numero K: "))

contador = 1
sinal = -1
soma = x
expoente = 3

while (x < k):
	resultado = resultado + (sinal * (x ** expoente / factorial(expoente)))
	sinal = sinal * (-1)
	
	print (round(soma,10))
-- EXECUTION TIME:
0.557195
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 15, in <module>
    resultado = resultado + (sinal * (x ** expoente / factorial(expoente)))
NameError: name 'resultado' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:35:14) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

x = eval(input("Informe valor de x: "))
k = int(input("Informe um numero K: "))

contador = 1
sinal = -1
soma = x
expoente = 3

while (contador < k):
	resultado = resultado + (sinal * (x ** expoente / factorial(expoente)))
	sinal = sinal * (-1)
	expoente = expoente + 2
	contador = contador ** 1
	
	print (round(soma,10))
-- EXECUTION TIME:
0.391743
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 15, in <module>
    resultado = resultado + (sinal * (x ** expoente / factorial(expoente)))
NameError: name 'resultado' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:35:26) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

x = eval(input("Informe valor de x: "))
k = int(input("Informe um numero K: "))

contador = 1
sinal = -1
soma = x
expoente = 3

while (contador < k):
	resultado = resultado + (sinal * (x ** expoente / factorial(expoente)))
	sinal = sinal * (-1)
	expoente = expoente + 2
	contador = contador ** 1
	
	print (round(resultado,10))
-- EXECUTION TIME:
0.358017
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 15, in <module>
    resultado = resultado + (sinal * (x ** expoente / factorial(expoente)))
NameError: name 'resultado' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:36:04) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

x = eval(input("Informe valor de x: "))
k = int(input("Informe um numero K: "))

contador = 1
sinal = -1
soma = x
expoente = 3

while (contador < k):
	resultado = resultado + (sinal * (x ** expoente / factorial(expoente)))
	sinal = sinal * (-1)
	expoente = expoente + 2
	contador = 1 + 1
	
	print (round(resultado,10))
-- EXECUTION TIME:
0.155242
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 15, in <module>
    resultado = resultado + (sinal * (x ** expoente / factorial(expoente)))
NameError: name 'resultado' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:36:19) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

x = eval(input("Informe valor de x: "))
k = int(input("Informe um numero K: "))

contador = 1
sinal = -1
soma = x
expoente = 3

while (contador < k):
	resultado = resultado + (sinal * (x ** expoente / factorial(expoente)))
	sinal = sinal * (-1)
	expoente = expoente + 2
	contador = 1 + 1
	
print (round(resultado,10))
-- EXECUTION TIME:
0.164061
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 15, in <module>
    resultado = resultado + (sinal * (x ** expoente / factorial(expoente)))
NameError: name 'resultado' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:36:20) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

x = eval(input("Informe valor de x: "))
k = int(input("Informe um numero K: "))

contador = 1
sinal = -1
soma = x
expoente = 3

while (contador < k):
	resultado = resultado + (sinal * (x ** expoente / factorial(expoente)))
	sinal = sinal * (-1)
	expoente = expoente + 2
	contador = 1 + 1
	
print (round(resultado,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    resultado = resultado + (sinal * (x ** expoente / factorial(expoente)))
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:40:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

x = eval(input("Informe valor de x: "))
k = int(input("Informe um numero K: "))

soma = x
i = 1
sinal = -1
expoente = 3

while (i < k):
	f = factorial(expoente)
	soma = soma (sinal * (x ** expoente))) / f
	sinal = sinal * (-1)
	expoente = expoente + 2
	i = i + 1
	
print (round(soma,10))
-- EXECUTION TIME:
0.157275
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 16
    soma = soma (sinal * (x ** expoente))) / f
                                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:40:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

x = eval(input("Informe valor de x: "))
k = int(input("Informe um numero K: "))

soma = x
i = 1
sinal = -1
expoente = 3

while (i < k):
	f = factorial(expoente)
	soma = soma (sinal * (x ** expoente))) / f
	sinal = sinal * (-1)
	expoente = expoente + 2
	i = i + 1
	
print (round(soma,10))
-- ERROR:
File "XXXX", line 16
    soma = soma (sinal * (x ** expoente))) / f
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:40:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

x = eval(input("Informe valor de x: "))
k = int(input("Informe um numero K: "))

soma = x
i = 1
sinal = -1
expoente = 3

while (i < k):
	f = factorial(expoente)
	soma = soma (sinal * (x ** expoente)) / f
	sinal = sinal * (-1)
	expoente = expoente + 2
	i = i + 1
	
print (round(soma,10))
-- EXECUTION TIME:
0.151231
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 16, in <module>
    soma = soma (sinal * (x ** expoente)) / f
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:40:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

x = eval(input("Informe valor de x: "))
k = int(input("Informe um numero K: "))

soma = x
i = 1
sinal = -1
expoente = 3

while (i < k):
	f = factorial(expoente)
	soma = soma (sinal * (x ** expoente)) / f
	sinal = sinal * (-1)
	expoente = expoente + 2
	i = i + 1
	
print (round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    soma = soma (sinal * (x ** expoente)) / f
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:40:59) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

x = eval(input("Informe valor de x: "))
k = int(input("Informe um numero K: "))

soma = x
i = 1
sinal = -1
expoente = 3

while (i < k):
	f = factorial(expoente)
	soma = soma + (sinal * (x ** expoente)) / f
	sinal = sinal * (-1)
	expoente = expoente + 2
	i = i + 1
	
print (round(soma,10))
-- EXECUTION TIME:
0.187991
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:03:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

x = eval(input("Informe valor de x: "))
k = int(input("Informe um numero K: "))

soma = x
i = 1
sinal = -1
expoente = 3

while (i < k):
	#f = factorial(expoente)
	soma = soma + (sinal * (x ** expoente)) / factorial(expoente)
	sinal = sinal * (-1)
	expoente = expoente + 2
	i = i + 1
	
print (round(soma,10))
-- EXECUTION TIME:
0.221505
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
